--- a/index.html
+++ b/index.html
@@ -7,14 +7,82 @@
     <title>Vite App</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="">
     <!-- <a href="/">Home Page</a>
     <a href="/about">About Page</a>
     <a href="/product">Product Page</a>
     <div id="app"></div> -->
-    <header class="w-1000px max  ">
-    
+    <div class="container max-w-6xl mx-auto">
+      <header>
+     <div class="logo text-center bg-sky-900"  >
+       <img class="mx-auto" src="./img/logo.png" alt="" width="200px">
+     </div>
+     <div class="menu flex justify-between bg-orange-500 ">
+       <ul class="flex">
+         <li class="p-4"><a class="text-white font-semibold border-b-2" href="">Trang Chủ   </a> </li>
+
+          <li class="p-4"><a class="text-white font-semibold"  href="c">Tuyển Sinh   </a> </li>
+
+            <li class="p-4"><a class="text-white font-semibold"  href="">Chương Trình Đào Tạo   </a> </li>
+           
+              <li class="p-4"><a class="text-white font-semibold"  href="">Góc Tuyển Sinh  </a> </li>
+
+                <li class="p-4"><a class="text-white font-semibold"  href="">Tuyển dụng  </a> </li>
+
+       </ul>
+       <div class="search bg-inherit p-4">
+         <input  type="text" width="20px">
+         <input type="submit" value="Tìm Kiếm">
+       </div>
+     </div>
+     <div class="banner">
+       <img src="./img/banner.jpg" alt="">
+     </div>
     </header>
+    <div class="content">
+     <h2 class="font-semibold mt-2 text-2xl">Tin Tức Học Tập</h2>
+     <div class="grid grid-cols-3  ">
+      <div class="learn border-4 mr-2  ">
+        <img class="m-4" src="./img/sv.png" alt="" width="340px">
+        <h3 class="m-4">Vinh danh 295 sinh viên fpt polytechnic học kì summer 2021</h3>
+        <p class="w-80 m-4">Tối ngày 20/12/2021 ,Cao đẳng fpt polytechnic đã tổ chức lễ tôn vinh "ong vàng" tuyên dương 295 sinh viên có kết quả cao nhất.</p>
+      </div>
+       <div class="learn border-4 ">
+        <img class="m-4" src="./img/sv1.jpg" alt="" width="340px">
+        <h3 class="m-4">Vinh danh 295 sinh viên fpt polytechnic học kì summer 2021</h3>
+        <p class="w-80 m-4">Tối ngày 20/12/2021 ,Cao đẳng fpt polytechnic đã tổ chức lễ tôn vinh "ong vàng" tuyên dương 295 sinh viên có kết quả cao nhất.</p>
+      </div>
+      <div class="learn border-4 ml-2 ">
+        <img class="m-4" src="./img/sv3.png" alt="" width="340px">
+        <h3 class="m-4">Vinh danh 295 sinh viên fpt polytechnic học kì summer 2021</h3>
+        <p class="w-80 m-4" >Tối ngày 20/12/2021 ,Cao đẳng fpt polytechnic đã tổ chức lễ tôn vinh "ong vàng" tuyên dương 295 sinh viên có kết quả cao nhất.</p>
+      </div>
+
+     </div>
+     <h2 class="font-semibold mt-2 text-2xl">Hoạt Động Sinh Viên</h2>
+     <div class="grid grid-cols-3  ">
+      <div class="learn border-4 mr-2  ">
+        <img class="m-4" src="./img/cd.jpg" alt="" width="340px">
+        <h3 class="m-4">Vinh danh 295 sinh viên fpt polytechnic học kì summer 2021</h3>
+        <p class="w-80 m-4">Tối ngày 20/12/2021 ,Cao đẳng fpt polytechnic đã tổ chức lễ tôn vinh "ong vàng" tuyên dương 295 sinh viên có kết quả cao nhất.</p>
+      </div>
+       <div class="learn border-4 ">
+        <img class="m-4" src="./img/sv4.jpg" alt="" width="340px">
+        <h3 class="m-4">Vinh danh 295 sinh viên fpt polytechnic học kì summer 2021</h3>
+        <p class="w-80 m-4">Tối ngày 20/12/2021 ,Cao đẳng fpt polytechnic đã tổ chức lễ tôn vinh "ong vàng" tuyên dương 295 sinh viên có kết quả cao nhất.</p>
+      </div>
+      <div class="learn border-4 ml-2 ">
+        <img class="m-4" src="./img/ss.jpg" alt="" width="340px">
+        <h3 class="m-4">Vinh danh 295 sinh viên fpt polytechnic học kì summer 2021</h3>
+        <p class="w-80 m-4" >Tối ngày 20/12/2021 ,Cao đẳng fpt polytechnic đã tổ chức lễ tôn vinh "ong vàng" tuyên dương 295 sinh viên có kết quả cao nhất.</p>
+      </div>
+
+     </div>
+    </div>
+    <div class="footer text-center bg-sky-900 p-4 text-white font-bold">
+      <span>Đặng Xuân Nam</span>
+    </div>
+    </div>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
