fix:Remove link css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" /> 
   </head>
   <body class="">
     <!-- <a href="/">Home Page</a>
@@ -21,7 +21,7 @@
        <ul class="flex">
          <li class="p-4"><a class="text-white font-semibold border-b-2" href="">Trang Chủ   </a> </li>
 
-          <li class="p-4"><a class="text-white font-semibold"  href="c">Tuyển Sinh   </a> </li>
+          <li class="p-4"><a class="text-white font-semibold"  href="">Tuyển Sinh   </a> </li>
 
             <li class="p-4"><a class="text-white font-semibold"  href="">Chương Trình Đào Tạo   </a> </li>
            
