fix lỗi: k hiển thị logo

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 
       <div class="container max-w-6xl mx-auto">
         <header id="header">
-      <!-- <div class="logo text-center bg-sky-900"  >
+       <!-- <div class="logo text-center bg-sky-900"  >
         <img class="mx-auto" src="./img/logo.png" alt="" width="200px">
-      </div>
+      </div> -->
+      <!--
       <div class="menu flex justify-between bg-orange-500 ">
         <ul class="flex">
           <li class="p-4"><a class="text-white font-semibold border-b-2" href="/">Trang Chủ   </a> </li>
